--- a/carte.html
+++ b/carte.html
@@ -24,7 +24,7 @@
 <!-- navbar -->
 <div class="topnav" id="myTopnav">
     <div class="topnav_logo"> 
-        <a href=" index.html" class="active"><img width="90px" src="../image/logo.png" alt="logo"></a>
+        <a href=" index.html" class="active"><img width="90px" src="image/logo.png" alt="logo"></a>
     </div>
     <div class="topnav_items">
     <a href="index.html">Home</a>
@@ -587,7 +587,7 @@
     <footer>
         <div class="logo_footer">
             <a href="index.html">
-                <img src="../image/logo.png" alt="logo">
+                <img src="image/logo.png" alt="logo">
             </a>
         </div>
         <div class="grid_footer">
